style: fixed spacing around list labels

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -181,15 +181,12 @@ a {
       -webkit-text-fill-color: transparent;
       font-weight: 500;
     }
-    p:has(+ ol) {
+    p:has(strong):has(+ ol) {
       color: var(--color-aqua);
       font-weight: 600;
       font-size: 1.25rem;
-      margin-bottom: 0.5em;
-      padding-top: 16px;
-      padding-bottom: 16px;
+      padding: 1rem 0;
     }
-
     a {
       text-decoration: underline;
       color: var(--color-aqua);
